fixes box content alignment

--- a/scss/dosing.scss
+++ b/scss/dosing.scss
@@ -102,6 +102,7 @@ main {
         display: flex;
         align-items: center;
         justify-content: center;
+        text-align: center;
 
         h5 {
             color: #0E404F;
